@startuml

title __VERIFIER's Class Diagram__\n

  namespace pt.ulisboa.tecnico.surespace.verifier {
    class pt.ulisboa.tecnico.surespace.verifier.VerifierApp {
        {static} + main()
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.verifier {
    class pt.ulisboa.tecnico.surespace.verifier.VerifierServiceImpl {
        + VerifierServiceImpl()
        + ping()
        + verifyProof()
        {static} - exceptionFromDomain()
    }
  }
  

  pt.ulisboa.tecnico.surespace.verifier.VerifierServiceImpl -up-|> pt.ulisboa.tecnico.surespace.verifier.grpc.VerifierServiceGrpc.VerifierServiceImplBase
  pt.ulisboa.tecnico.surespace.verifier.VerifierServiceImpl o-- pt.ulisboa.tecnico.surespace.verifier.domain.Verifier : verifier


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
